# UserLoginRegisterSystem

./: .gitignore  Dockerfile  README.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: auth.py  deps.py  user.py
backend/app/core/: jwt.py  security.py
backend/app/crud/: user.py
backend/app/database/: database.py
backend/app/models/: user.py
backend/app/schemas/: token.py  user.py
backend/tests/: test_api.py
frontend/: index.html
frontend/css/: modal-style.css  user-modal-style.css
frontend/js/: app.js  profile-modal.js  user-modal.js
frontend/script/: app.js  password-edit-modal.js  profile-modal.js  user-modal.js  user_modal.js
